no content found alignment fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6827,7 +6827,7 @@ body {
 }
 
 .imagClass {
-  margin-top: 30px;
+  margin-top: 45px !important;
 }
 
 .imagClass.power-listing {
